fixed alignment on  buttons, increased modal box shadow to have overlay simliar to other modals

--- a/src/apps/content-editor/src/app/views/ItemEdit/components/Header/ItemVersioning/ScheduleFlyout/ScheduleFlyout.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/components/Header/ItemVersioning/ScheduleFlyout/ScheduleFlyout.less
@@ -2,7 +2,7 @@
 
 @boxsize: 30px;
 @borderColor: rgba(26, 32, 44, 0.12);
-@box-width: 460px;
+@box-width: 480px;
 .Flyout {
   position: absolute;
   top: 74px;
@@ -36,7 +36,7 @@
   }
 
   .Card {
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 2000px 2500px rgba(0, 0, 0, 0.5);
 
     .Warn {
       color: @zesty-orange;
@@ -51,6 +51,9 @@
     .CardFooter {
       justify-content: space-between;
       display: flex;
+      .SchedulePublishButton {
+        margin-right: 8px;
+      }
     }
   }
 
@@ -68,13 +71,12 @@
     }
 
     .Card {
-      box-shadow: 0px 0px 400px 400px rgba(0, 0, 0, 0.5);
       padding: 0px;
       margin: 0px;
       position: absolute;
       left: 50%;
-      margin-left: @box-width / -2;
-      margin-top: 100px;
+      top: 30%;
+      transform: translate(-50%, -50%);
     }
   }
 }
